:sparkles: add dimension reduction

--- a/UnsupervisedLearning/notebooks/experiment1_clustering.ipynb
+++ b/UnsupervisedLearning/notebooks/experiment1_clustering.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:00:32.675041Z",
-     "start_time": "2024-10-29T07:00:32.671041Z"
+     "end_time": "2024-10-31T06:46:07.761966Z",
+     "start_time": "2024-10-31T06:46:07.756934Z"
     }
    },
    "source": [
@@ -29,13 +29,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:00:33.107646Z",
-     "start_time": "2024-10-29T07:00:32.680362Z"
+     "end_time": "2024-10-31T06:46:08.270757Z",
+     "start_time": "2024-10-31T06:46:07.826901Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "%matplotlib inline"
    ],
    "id": "828896e5bad805e1",
@@ -45,8 +46,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:00:33.821982Z",
-     "start_time": "2024-10-29T07:00:33.160613Z"
+     "end_time": "2024-10-31T06:46:08.871205Z",
+     "start_time": "2024-10-31T06:46:08.339506Z"
     }
    },
    "cell_type": "code",
@@ -70,14 +71,17 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:00:33.840242Z",
-     "start_time": "2024-10-29T07:00:33.826431Z"
+     "end_time": "2024-10-31T06:46:08.891277Z",
+     "start_time": "2024-10-31T06:46:08.875669Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "X_train, _, y_train, _ = load_processed_data('data/dataset1')\n",
+    "X_train, X_test, y_train, y_test = load_processed_data('data/dataset1')\n",
     "\n",
+    "# combine the train and test data\n",
+    "X_train = np.concatenate([X_train, X_test], axis=0)\n",
+    "y_train = np.concatenate([y_train, y_test], axis=0)\n",
     "dataset = 'dataset1'\n",
     "experiment_name = 'experiment1'\n",
     "y_train = (y_train + 1) / 2"
@@ -95,8 +99,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:00:33.855880Z",
-     "start_time": "2024-10-29T07:00:33.847139Z"
+     "end_time": "2024-10-31T06:46:08.910912Z",
+     "start_time": "2024-10-31T06:46:08.899795Z"
     }
    },
    "cell_type": "code",
@@ -108,8 +112,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:25.766787Z",
-     "start_time": "2024-10-29T07:00:33.860938Z"
+     "end_time": "2024-10-31T06:48:48.117599Z",
+     "start_time": "2024-10-31T06:46:08.916526Z"
     }
    },
    "cell_type": "code",
@@ -121,8 +125,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:25.807694Z",
-     "start_time": "2024-10-29T07:02:25.786701Z"
+     "end_time": "2024-10-31T06:48:48.165360Z",
+     "start_time": "2024-10-31T06:48:48.138385Z"
     }
    },
    "cell_type": "code",
@@ -159,8 +163,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:27.079131Z",
-     "start_time": "2024-10-29T07:02:25.832859Z"
+     "end_time": "2024-10-31T06:48:51.128438Z",
+     "start_time": "2024-10-31T06:48:48.178860Z"
     }
    },
    "cell_type": "code",
@@ -215,8 +219,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:28.435973Z",
-     "start_time": "2024-10-29T07:02:27.086185Z"
+     "end_time": "2024-10-31T06:48:53.223912Z",
+     "start_time": "2024-10-31T06:48:51.137333Z"
     }
    },
    "cell_type": "code",
@@ -282,8 +286,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:29.144166Z",
-     "start_time": "2024-10-29T07:02:28.442660Z"
+     "end_time": "2024-10-31T06:48:53.966440Z",
+     "start_time": "2024-10-31T06:48:53.235464Z"
     }
    },
    "cell_type": "code",
@@ -335,8 +339,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:29.320728Z",
-     "start_time": "2024-10-29T07:02:29.151917Z"
+     "end_time": "2024-10-31T06:48:54.149643Z",
+     "start_time": "2024-10-31T06:48:53.975945Z"
     }
    },
    "cell_type": "code",
@@ -354,8 +358,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:29.466154Z",
-     "start_time": "2024-10-29T07:02:29.329908Z"
+     "end_time": "2024-10-31T06:48:54.304963Z",
+     "start_time": "2024-10-31T06:48:54.158616Z"
     }
    },
    "cell_type": "code",
@@ -381,14 +385,14 @@
       "K-Means Cluster Composition:\n",
       "True_Label        0.0        1.0   Size\n",
       "Cluster                                \n",
-      "0           95.202765   4.797235  21700\n",
-      "1           76.177778  23.822222  11250\n",
+      "0           76.367770  23.632230  14074\n",
+      "1           95.153795   4.846205  27114\n",
       "\n",
       "EM Cluster Composition:\n",
       "True_Label        0.0        1.0   Size\n",
       "Cluster                                \n",
-      "0           95.351870   4.648130  21471\n",
-      "1           76.278421  23.721579  11479\n"
+      "0           76.416475  23.583525  14349\n",
+      "1           95.320243   4.679757  26839\n"
      ]
     }
    ],
@@ -397,8 +401,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:29.488304Z",
-     "start_time": "2024-10-29T07:02:29.476393Z"
+     "end_time": "2024-10-31T06:48:54.392426Z",
+     "start_time": "2024-10-31T06:48:54.380802Z"
     }
    },
    "cell_type": "code",
@@ -408,18 +412,18 @@
     {
      "data": {
       "text/plain": [
-       "{'kmeans': {'adjusted_rand': 0.1205605385237297,\n",
-       "  'normalized_mutual_info': np.float64(0.07715521390770433),\n",
-       "  'adjusted_mutual_info': np.float64(0.07712704835389132),\n",
-       "  'homogeneity': np.float64(0.10881666504885362),\n",
-       "  'completeness': np.float64(0.05976570085273393),\n",
-       "  'v_measure': np.float64(0.07715521390770433)},\n",
-       " 'em': {'adjusted_rand': 0.1177957347269449,\n",
-       "  'normalized_mutual_info': np.float64(0.07851231469374532),\n",
-       "  'adjusted_mutual_info': np.float64(0.07848431613410364),\n",
-       "  'homogeneity': np.float64(0.11122707025529976),\n",
-       "  'completeness': np.float64(0.06066822268503489),\n",
-       "  'v_measure': np.float64(0.07851231469374532)}}"
+       "{'kmeans': {'adjusted_rand': 0.11861320217946517,\n",
+       "  'normalized_mutual_info': np.float64(0.07543964029224692),\n",
+       "  'adjusted_mutual_info': np.float64(0.07541705831893174),\n",
+       "  'homogeneity': np.float64(0.10652688887140759),\n",
+       "  'completeness': np.float64(0.058397707726779526),\n",
+       "  'v_measure': np.float64(0.07543964029224691)},\n",
+       " 'em': {'adjusted_rand': 0.1165391720599892,\n",
+       "  'normalized_mutual_info': np.float64(0.07730453817491507),\n",
+       "  'adjusted_mutual_info': np.float64(0.07728209837408168),\n",
+       "  'homogeneity': np.float64(0.10963013387832135),\n",
+       "  'completeness': np.float64(0.05970105535358838),\n",
+       "  'v_measure': np.float64(0.07730453817491507)}}"
       ]
      },
      "execution_count": 13,
@@ -432,8 +436,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:30.341815Z",
-     "start_time": "2024-10-29T07:02:29.499896Z"
+     "end_time": "2024-10-31T06:48:54.784855Z",
+     "start_time": "2024-10-31T06:48:54.409865Z"
     }
    },
    "cell_type": "code",
@@ -466,13 +470,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:30.367423Z",
-     "start_time": "2024-10-29T07:02:30.352759Z"
+     "end_time": "2024-10-31T06:48:54.811487Z",
+     "start_time": "2024-10-31T06:48:54.795334Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "X_train, _, y_train, _ = load_processed_data('data/dataset2')\n",
+    "X_train, X_test, y_train, y_test = load_processed_data('data/dataset2')\n",
+    "X_train = np.concatenate([X_train, X_test], axis=0)\n",
+    "y_train = np.concatenate([y_train, y_test], axis=0)\n",
     "dataset = 'dataset2'\n",
     "experiment_name = 'experiment1'"
    ],
@@ -489,8 +495,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:30.695233Z",
-     "start_time": "2024-10-29T07:02:30.375963Z"
+     "end_time": "2024-10-31T06:48:55.133111Z",
+     "start_time": "2024-10-31T06:48:54.820071Z"
     }
    },
    "cell_type": "code",
@@ -517,8 +523,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:30.715035Z",
-     "start_time": "2024-10-29T07:02:30.704461Z"
+     "end_time": "2024-10-31T06:48:55.152965Z",
+     "start_time": "2024-10-31T06:48:55.142560Z"
     }
    },
    "cell_type": "code",
@@ -530,8 +536,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:32.876593Z",
-     "start_time": "2024-10-29T07:02:30.724417Z"
+     "end_time": "2024-10-31T06:48:57.783496Z",
+     "start_time": "2024-10-31T06:48:55.162253Z"
     }
    },
    "cell_type": "code",
@@ -570,8 +576,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:34.170493Z",
-     "start_time": "2024-10-29T07:02:33.064983Z"
+     "end_time": "2024-10-31T06:49:01.046454Z",
+     "start_time": "2024-10-31T06:48:57.792950Z"
     }
    },
    "cell_type": "code",
@@ -626,8 +632,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:35.534463Z",
-     "start_time": "2024-10-29T07:02:34.180069Z"
+     "end_time": "2024-10-31T06:49:04.265922Z",
+     "start_time": "2024-10-31T06:49:01.057428Z"
     }
    },
    "cell_type": "code",
@@ -692,8 +698,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:36.248958Z",
-     "start_time": "2024-10-29T07:02:35.543583Z"
+     "end_time": "2024-10-31T06:49:04.967304Z",
+     "start_time": "2024-10-31T06:49:04.276319Z"
     }
    },
    "cell_type": "code",
@@ -745,8 +751,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:36.610163Z",
-     "start_time": "2024-10-29T07:02:36.257570Z"
+     "end_time": "2024-10-31T06:49:05.307012Z",
+     "start_time": "2024-10-31T06:49:04.977646Z"
     }
    },
    "cell_type": "code",
@@ -778,20 +784,20 @@
       "K-Means Cluster Composition:\n",
       "True_Label          0          1  Size\n",
       "Cluster                               \n",
-      "0           46.590909  53.409091   352\n",
-      "1           44.759207  55.240793   353\n",
-      "2           55.442177  44.557823   294\n",
-      "3           53.113553  46.886447   273\n",
-      "4           52.054795  47.945205   292\n",
+      "0           53.551913  46.448087   366\n",
+      "1           50.143266  49.856734   349\n",
+      "2           49.157303  50.842697   356\n",
+      "3           46.118721  53.881279   438\n",
+      "4           45.413870  54.586130   447\n",
       "\n",
       "EM Cluster Composition:\n",
       "True_Label          0          1  Size\n",
       "Cluster                               \n",
-      "0           46.590909  53.409091   352\n",
-      "1           44.759207  55.240793   353\n",
-      "2           55.442177  44.557823   294\n",
-      "3           53.113553  46.886447   273\n",
-      "4           52.054795  47.945205   292\n"
+      "0           53.551913  46.448087   366\n",
+      "1           50.143266  49.856734   349\n",
+      "2           49.157303  50.842697   356\n",
+      "3           46.118721  53.881279   438\n",
+      "4           45.413870  54.586130   447\n"
      ]
     }
    ],
@@ -800,8 +806,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T07:02:36.676820Z",
-     "start_time": "2024-10-29T07:02:36.674858Z"
+     "end_time": "2024-10-31T06:49:05.318891Z",
+     "start_time": "2024-10-31T06:49:05.317435Z"
     }
    },
    "cell_type": "code",
