--- a/UnsupervisedLearning/notebooks/experiment2_dimensionality.ipynb
+++ b/UnsupervisedLearning/notebooks/experiment2_dimensionality.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:51:58.546867Z",
-     "start_time": "2024-10-31T06:51:58.542155Z"
+     "end_time": "2024-10-31T08:11:25.315897Z",
+     "start_time": "2024-10-31T08:11:25.310177Z"
     }
    },
    "source": [
@@ -29,8 +29,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:51:59.514527Z",
-     "start_time": "2024-10-31T06:51:58.568364Z"
+     "end_time": "2024-10-31T08:11:26.997133Z",
+     "start_time": "2024-10-31T08:11:26.116509Z"
     }
    },
    "cell_type": "code",
@@ -48,16 +48,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:51:59.671115Z",
-     "start_time": "2024-10-31T06:51:59.582632Z"
+     "end_time": "2024-10-31T08:11:29.732565Z",
+     "start_time": "2024-10-31T08:11:29.717958Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "import os\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import numpy as np"
    ],
    "id": "274dd222bab4bf18",
    "outputs": [],
@@ -75,8 +73,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:51:59.690551Z",
-     "start_time": "2024-10-31T06:51:59.675779Z"
+     "end_time": "2024-10-31T08:11:34.055821Z",
+     "start_time": "2024-10-31T08:11:34.035034Z"
     }
    },
    "cell_type": "code",
@@ -100,8 +98,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:51:59.706363Z",
-     "start_time": "2024-10-31T06:51:59.697569Z"
+     "end_time": "2024-10-31T08:08:45.760862Z",
+     "start_time": "2024-10-31T08:08:45.743787Z"
     }
    },
    "cell_type": "code",
@@ -113,8 +111,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:51:59.726242Z",
-     "start_time": "2024-10-31T06:51:59.716722Z"
+     "end_time": "2024-10-31T08:08:46.453787Z",
+     "start_time": "2024-10-31T08:08:46.440342Z"
     }
    },
    "cell_type": "code",
@@ -148,8 +146,32 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:51:59.769567Z",
-     "start_time": "2024-10-31T06:51:59.746348Z"
+     "end_time": "2024-10-31T08:11:55.651705Z",
+     "start_time": "2024-10-31T08:11:55.623471Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "np.__version__",
+   "id": "30f7686ad7145bb1",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.1.2'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-31T08:08:48.773917Z",
+     "start_time": "2024-10-31T08:08:48.735174Z"
     }
    },
    "cell_type": "code",
