update previous experiments

--- a/UnsupervisedLearning/notebooks/experiment1_clustering.ipynb
+++ b/UnsupervisedLearning/notebooks/experiment1_clustering.ipynb
@@ -6,12 +6,14 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:46:07.761966Z",
-     "start_time": "2024-10-31T06:46:07.756934Z"
+     "end_time": "2024-11-04T09:12:50.716961Z",
+     "start_time": "2024-11-04T09:12:50.710668Z"
     }
    },
    "source": [
     "import os\n",
+    "from random import random\n",
+    "\n",
     "os.chdir('../')\n",
     "print(os.getcwd())"
    ],
@@ -29,8 +31,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:46:08.270757Z",
-     "start_time": "2024-10-31T06:46:07.826901Z"
+     "end_time": "2024-11-04T09:12:52.136647Z",
+     "start_time": "2024-11-04T09:12:51.549872Z"
     }
    },
    "cell_type": "code",
@@ -44,10 +46,16 @@
    "execution_count": 2
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "d8e284116317b5d7"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:46:08.871205Z",
-     "start_time": "2024-10-31T06:46:08.339506Z"
+     "end_time": "2024-11-05T07:18:41.288869Z",
+     "start_time": "2024-11-05T07:18:41.244152Z"
     }
    },
    "cell_type": "code",
@@ -55,12 +63,21 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "from src.utils.data_loader import load_processed_data, save_csv\n",
-    "from src.utils.plotting import plot_metrics_vs_cluster, plot_cluster_evaluation\n",
+    "from src.utils.plotting import plot_metrics_vs_cluster, plot_cluster_evaluation, visualize_clusters_tsne\n",
     "from src.experiments.experiment1_clustering import ClusteringExperiment"
    ],
    "id": "3afd9a4a4b49cc7b",
-   "outputs": [],
-   "execution_count": 3
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "execution_count": 35
   },
   {
    "metadata": {},
@@ -71,8 +88,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:46:08.891277Z",
-     "start_time": "2024-10-31T06:46:08.875669Z"
+     "end_time": "2024-11-05T07:14:20.704341Z",
+     "start_time": "2024-11-05T07:14:20.642294Z"
     }
    },
    "cell_type": "code",
@@ -84,11 +101,20 @@
     "y_train = np.concatenate([y_train, y_test], axis=0)\n",
     "dataset = 'dataset1'\n",
     "experiment_name = 'experiment1'\n",
-    "y_train = (y_train + 1) / 2"
+    "y_train = (y_train + 1) / 2\n",
+    "print(X_train.shape)"
    ],
    "id": "8c5bbb3cdb648ec3",
-   "outputs": [],
-   "execution_count": 4
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(41188, 67)\n"
+     ]
+    }
+   ],
+   "execution_count": 29
   },
   {
    "metadata": {},
@@ -99,21 +125,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:46:08.910912Z",
-     "start_time": "2024-10-31T06:46:08.899795Z"
+     "end_time": "2024-11-05T07:14:23.867512Z",
+     "start_time": "2024-11-05T07:14:23.850213Z"
     }
    },
    "cell_type": "code",
    "source": "experiment = ClusteringExperiment()",
    "id": "66d3a423fcd271db",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:48:48.117599Z",
-     "start_time": "2024-10-31T06:46:08.916526Z"
+     "end_time": "2024-11-04T03:19:23.085717Z",
+     "start_time": "2024-11-04T03:15:15.166092Z"
     }
    },
    "cell_type": "code",
@@ -125,8 +151,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:48:48.165360Z",
-     "start_time": "2024-10-31T06:48:48.138385Z"
+     "end_time": "2024-11-04T03:19:23.491506Z",
+     "start_time": "2024-11-04T03:19:23.353192Z"
     }
    },
    "cell_type": "code",
@@ -163,8 +189,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:48:51.128438Z",
-     "start_time": "2024-10-31T06:48:48.178860Z"
+     "end_time": "2024-11-04T03:19:25.569098Z",
+     "start_time": "2024-11-04T03:19:24.093317Z"
     }
    },
    "cell_type": "code",
@@ -219,8 +245,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:48:53.223912Z",
-     "start_time": "2024-10-31T06:48:51.137333Z"
+     "end_time": "2024-11-04T03:19:27.224665Z",
+     "start_time": "2024-11-04T03:19:25.626247Z"
     }
    },
    "cell_type": "code",
@@ -286,8 +312,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:48:53.966440Z",
-     "start_time": "2024-10-31T06:48:53.235464Z"
+     "end_time": "2024-11-04T03:19:28.110814Z",
+     "start_time": "2024-11-04T03:19:27.280637Z"
     }
    },
    "cell_type": "code",
@@ -339,8 +365,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:48:54.149643Z",
-     "start_time": "2024-10-31T06:48:53.975945Z"
+     "end_time": "2024-11-05T07:14:30.361291Z",
+     "start_time": "2024-11-05T07:14:29.994027Z"
     }
    },
    "cell_type": "code",
@@ -353,13 +379,13 @@
    ],
    "id": "eea507012d5777b2",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:48:54.304963Z",
-     "start_time": "2024-10-31T06:48:54.158616Z"
+     "end_time": "2024-11-05T07:14:31.330345Z",
+     "start_time": "2024-11-05T07:14:31.085178Z"
     }
    },
    "cell_type": "code",
@@ -385,24 +411,24 @@
       "K-Means Cluster Composition:\n",
       "True_Label        0.0        1.0   Size\n",
       "Cluster                                \n",
-      "0           76.367770  23.632230  14074\n",
-      "1           95.153795   4.846205  27114\n",
+      "0           75.547986  24.452014  13504\n",
+      "1           95.166883   4.833117  27684\n",
       "\n",
       "EM Cluster Composition:\n",
       "True_Label        0.0        1.0   Size\n",
       "Cluster                                \n",
-      "0           76.416475  23.583525  14349\n",
-      "1           95.320243   4.679757  26839\n"
+      "0           75.562463  24.437537  13512\n",
+      "1           95.165486   4.834514  27676\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:48:54.392426Z",
-     "start_time": "2024-10-31T06:48:54.380802Z"
+     "end_time": "2024-11-05T07:14:34.372144Z",
+     "start_time": "2024-11-05T07:14:34.351282Z"
     }
    },
    "cell_type": "code",
@@ -412,32 +438,81 @@
     {
      "data": {
       "text/plain": [
-       "{'kmeans': {'adjusted_rand': 0.11861320217946517,\n",
-       "  'normalized_mutual_info': np.float64(0.07543964029224692),\n",
-       "  'adjusted_mutual_info': np.float64(0.07541705831893174),\n",
-       "  'homogeneity': np.float64(0.10652688887140759),\n",
-       "  'completeness': np.float64(0.058397707726779526),\n",
-       "  'v_measure': np.float64(0.07543964029224691)},\n",
-       " 'em': {'adjusted_rand': 0.1165391720599892,\n",
-       "  'normalized_mutual_info': np.float64(0.07730453817491507),\n",
-       "  'adjusted_mutual_info': np.float64(0.07728209837408168),\n",
-       "  'homogeneity': np.float64(0.10963013387832135),\n",
-       "  'completeness': np.float64(0.05970105535358838),\n",
-       "  'v_measure': np.float64(0.07730453817491507)}}"
+       "{'kmeans': {'adjusted_rand': 0.1314994774803884,\n",
+       "  'normalized_mutual_info': np.float64(0.08033750118063479),\n",
+       "  'adjusted_mutual_info': np.float64(0.08031482197211448),\n",
+       "  'homogeneity': np.float64(0.11235870411271133),\n",
+       "  'completeness': np.float64(0.06251990120418494)},\n",
+       " 'em': {'adjusted_rand': 0.13128195402770257,\n",
+       "  'normalized_mutual_info': np.float64(0.0802351104097296),\n",
+       "  'adjusted_mutual_info': np.float64(0.08021243188677764),\n",
+       "  'homogeneity': np.float64(0.11223138219372385),\n",
+       "  'completeness': np.float64(0.06243530344840227)}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:48:54.784855Z",
-     "start_time": "2024-10-31T06:48:54.409865Z"
+     "end_time": "2024-11-05T07:19:58.475501Z",
+     "start_time": "2024-11-05T07:19:44.549640Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "visualize_clusters_tsne(\n",
+    "    X=X_train,\n",
+    "    labels=kmeans_labels,\n",
+    "    dataset=dataset,\n",
+    "    experiment=experiment_name,\n",
+    "    algorithm='kmeans',\n",
+    "    random_state=7,\n",
+    "    sample_size=2000\n",
+    ")\n",
+    "visualize_clusters_tsne(\n",
+    "    X=X_train,\n",
+    "    labels=em_labels,\n",
+    "    dataset=dataset,\n",
+    "    experiment=experiment_name,\n",
+    "    algorithm='gmm',\n",
+    "    random_state=7,\n",
+    "    sample_size=2000\n",
+    ")\n",
+    "visualize_clusters_tsne(\n",
+    "    X=X_train,\n",
+    "    labels=y_train,\n",
+    "    dataset=dataset,\n",
+    "    experiment=experiment_name,\n",
+    "    algorithm='true_label',\n",
+    "    random_state=7,\n",
+    "    sample_size=2000\n",
+    ")\n"
+   ],
+   "id": "290b54cea822661c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plot saved at figs/dataset1/experiment1/tsne_visualization_kmeans.png\n",
+      "Plot saved at figs/dataset1/experiment1/tsne_visualization_gmm.png\n",
+      "Plot saved at figs/dataset1/experiment1/tsne_visualization_true_label.png\n"
+     ]
+    }
+   ],
+   "execution_count": 37
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-04T03:19:29.998159Z",
+     "start_time": "2024-11-04T03:19:29.197813Z"
     }
    },
    "cell_type": "code",
@@ -470,8 +545,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:48:54.811487Z",
-     "start_time": "2024-10-31T06:48:54.795334Z"
+     "end_time": "2024-11-05T08:22:13.604855Z",
+     "start_time": "2024-11-05T08:22:13.533378Z"
     }
    },
    "cell_type": "code",
@@ -480,11 +555,20 @@
     "X_train = np.concatenate([X_train, X_test], axis=0)\n",
     "y_train = np.concatenate([y_train, y_test], axis=0)\n",
     "dataset = 'dataset2'\n",
-    "experiment_name = 'experiment1'"
+    "experiment_name = 'experiment1'\n",
+    "print(X_train.shape)"
    ],
    "id": "91bcfcd1ff269a95",
-   "outputs": [],
-   "execution_count": 15
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1956, 384)\n"
+     ]
+    }
+   ],
+   "execution_count": 38
   },
   {
    "metadata": {},
@@ -523,15 +607,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:48:55.152965Z",
-     "start_time": "2024-10-31T06:48:55.142560Z"
+     "end_time": "2024-11-05T08:22:21.264956Z",
+     "start_time": "2024-11-05T08:22:21.248132Z"
     }
    },
    "cell_type": "code",
    "source": "experiment = ClusteringExperiment()",
    "id": "8e5c742b5f3df488",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 39
   },
   {
    "metadata": {
@@ -576,8 +660,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:49:01.046454Z",
-     "start_time": "2024-10-31T06:48:57.792950Z"
+     "end_time": "2024-11-05T08:22:25.071851Z",
+     "start_time": "2024-11-05T08:22:25.033677Z"
     }
    },
    "cell_type": "code",
@@ -612,16 +696,18 @@
    "id": "95797350f5c6031d",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Plot saved at figs/dataset2/experiment1/inertia_vs_k_kmeans.png\n",
-      "Plot saved at figs/dataset2/experiment1/silhouette_score_vs_k_kmeans.png\n",
-      "Plot saved at figs/dataset2/experiment1/calinski_harabasz_score_vs_k_kmeans.png\n"
+     "ename": "NameError",
+     "evalue": "name 'kmean_metrics' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[40], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m plot_metrics_vs_cluster(\n\u001B[0;32m----> 2\u001B[0m     df \u001B[38;5;241m=\u001B[39m \u001B[43mkmean_metrics\u001B[49m,\n\u001B[1;32m      3\u001B[0m     metric_col \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124minertia\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[1;32m      4\u001B[0m     k_col \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mk\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[1;32m      5\u001B[0m     dataset \u001B[38;5;241m=\u001B[39m dataset,\n\u001B[1;32m      6\u001B[0m     experiment \u001B[38;5;241m=\u001B[39m experiment_name,\n\u001B[1;32m      7\u001B[0m     algo_name\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mkmeans\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[1;32m      8\u001B[0m )\n\u001B[1;32m     10\u001B[0m plot_metrics_vs_cluster(\n\u001B[1;32m     11\u001B[0m     df \u001B[38;5;241m=\u001B[39m kmean_metrics,\n\u001B[1;32m     12\u001B[0m     metric_col \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124msilhouette_score\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     16\u001B[0m     algo_name\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mkmeans\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[1;32m     17\u001B[0m )\n\u001B[1;32m     19\u001B[0m plot_metrics_vs_cluster(\n\u001B[1;32m     20\u001B[0m     df \u001B[38;5;241m=\u001B[39m kmean_metrics,\n\u001B[1;32m     21\u001B[0m     metric_col \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mcalinski_harabasz_score\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     25\u001B[0m     algo_name\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mkmeans\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[1;32m     26\u001B[0m )\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'kmean_metrics' is not defined"
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 40
   },
   {
    "metadata": {},
@@ -751,8 +837,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:49:05.307012Z",
-     "start_time": "2024-10-31T06:49:04.977646Z"
+     "end_time": "2024-11-05T08:22:48.252589Z",
+     "start_time": "2024-11-05T08:22:47.704148Z"
     }
    },
    "cell_type": "code",
@@ -801,20 +887,69 @@
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 41
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T06:49:05.318891Z",
-     "start_time": "2024-10-31T06:49:05.317435Z"
+     "end_time": "2024-11-05T08:23:49.926093Z",
+     "start_time": "2024-11-05T08:23:36.803645Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "# plot\n",
+    "visualize_clusters_tsne(\n",
+    "    X=X_train,\n",
+    "    labels=kmeans_labels,\n",
+    "    dataset=dataset,\n",
+    "    experiment=experiment_name,\n",
+    "    algorithm='kmeans',\n",
+    "    random_state=7,\n",
+    "    sample_size=2000\n",
+    ")\n",
+    "\n",
+    "visualize_clusters_tsne(\n",
+    "    X=X_train,\n",
+    "    labels=em_labels,\n",
+    "    dataset=dataset,\n",
+    "    experiment=experiment_name,\n",
+    "    algorithm='gmm',\n",
+    "    random_state=7,\n",
+    "    sample_size=2000\n",
+    ")\n",
+    "\n",
+    "visualize_clusters_tsne(\n",
+    "    X=X_train,\n",
+    "    labels=y_train,\n",
+    "    dataset=dataset,\n",
+    "    experiment=experiment_name,\n",
+    "    algorithm='true_label',\n",
+    "    random_state=7,\n",
+    "    sample_size=2000\n",
+    ")"
+   ],
    "id": "12a141ea38310396",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plot saved at figs/dataset2/experiment1/tsne_visualization_kmeans.png\n",
+      "Plot saved at figs/dataset2/experiment1/tsne_visualization_gmm.png\n",
+      "Plot saved at figs/dataset2/experiment1/tsne_visualization_true_label.png\n"
+     ]
+    }
+   ],
+   "execution_count": 43
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "",
+   "id": "b0d21c59c088ff00"
   }
  ],
  "metadata": {
